--- a/assets/sass/_custom-variables.scss
+++ b/assets/sass/_custom-variables.scss
@@ -13,9 +13,10 @@ $header-right:       				calc(100% - 350px);
 
 // Fonts Family
 $font-family-Roboto: 				'Roboto', sans-serif;
+$font-display:              'swap';
 
 // Based on HTML reset
-$baseFontSize: 16;  
+$baseFontSize: 16;
 
 $large-laptop:							1440px;
 $small-laptop:							1366px;
