--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -3,13 +3,13 @@
     @include watch_now;
 }
 .home-main-slider .slide_content {
-    @include rem(padding-bottom, 20px); 
+    @include rem(padding-bottom, 20px);
     background: $black;
     .watch_now {
         @include watch_now_big;
         @include media-breakpoint-down(md){
             @include watch_now;
-            @include rem(margin-top, -60px); 
+            @include rem(margin-top, -60px);
         }
     }
     h2 {
@@ -27,13 +27,13 @@
     }
     p {
         color: $white;
-        @include rem(padding, 15px 50px); 
-        @include rem(font-size, 30px); 
-        @include rem(line-height, 30px); 
-        @include rem(min-height, 130px); 
+        @include rem(padding, 15px 50px);
+        @include rem(font-size, 30px);
+        @include rem(line-height, 30px);
+        @include rem(min-height, 130px);
         @include media-breakpoint-down(md){
-            @include rem(font-size, 20px); 
-            @include rem(line-height, 20px); 
+            @include rem(font-size, 20px);
+            @include rem(line-height, 20px);
             @include rem(min-height, 80px);
         }
     }
@@ -51,7 +51,7 @@
             @include rem(min-height, 88px);
         }
         p {
-            @include rem(font-size, 20px); 
+            @include rem(font-size, 20px);
             @include rem(line-height, 22px);
             margin-bottom: 0;
             @include rem(min-height, 100px);
@@ -65,13 +65,13 @@
             height: 100%;
             width: 100%;
             &:after {
-                @include rem(bottom, 15px); 
+                @include rem(bottom, 15px);
                 @include rem(left, 16px);
                 position: absolute;
             }
             span{
                 display: block;
-                @include rem(height, 60px); 
+                @include rem(height, 60px);
                 @include rem(width, 60px);
                 position: absolute;
                 bottom: 0;
@@ -122,6 +122,7 @@
     }
     .slick-prev:before, .slick-next:before {
         font-family: 'Font Awesome 5 Pro';
+        font-display: $font-display;
         font-weight: 300;
         color: $white;
         @include rem(font-size, 45px);
