--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -37,7 +37,7 @@ header {
         }
     }
     .site-logo img {
-        @include respond-to(handhelds) { 
+        @include respond-to(handhelds) {
             @include rem(height, 87px);
         }
     }
@@ -45,13 +45,13 @@ header {
         @include media-breakpoint-down(md){
             max-width: 100vw;
         }
-    }	
+    }
     .navbar {
         @include media-breakpoint-down(md){
             padding-left: 5%;
             padding-right: 5%;
-        } 
-    }	
+        }
+    }
     .content {
         width: 100%;
         @include media-breakpoint-down(md){
@@ -121,6 +121,7 @@ header {
                 @include rem(font-size, 28px);
                 color: $white;
                 font-family: $font-family-Roboto;
+                font-display: $font-display;
                 @include rem(margin, 35px 32px);
                 text-transform: uppercase;
                 @include rem(padding-bottom, 32px);
@@ -169,7 +170,7 @@ header {
                     position: inherit !important;
                     background: transparent;
 										border: 0;
-               
+
         position: static!important;
         background: transparent;
         padding: 0 5%;
@@ -203,7 +204,7 @@ header {
                 @include media-breakpoint-down(md){
                     content: "-";
                     margin-right: 10px;
-                }	
+                }
             }
         }
     }
@@ -233,7 +234,7 @@ header.fixed-top.small-header {
         @include rem(height, 180px);
         @include rem(padding-top, 16px);
         @include media-breakpoint-down(md){
-            @include rem(height, 140px); 
+            @include rem(height, 140px);
         }
         .main-navigation .navbar-nav > li.dropdown:hover .dropdown-menu {
             @include rem(top, 150px);
@@ -246,14 +247,14 @@ header.fixed-top.small-header {
 header.center-logo-header {
     @include rem(height, 210px);
     @include media-breakpoint-down(md){
-        @include rem(height, 150px); 
+        @include rem(height, 150px);
     }
 		.site-branding{
 			@include media-breakpoint-down(md){
       	text-align: left !important;
 				z-index: 9999999;
 				position: relative;
-				width: inherit; 
+				width: inherit;
 				float: left;
     	}
 		}
@@ -261,7 +262,7 @@ header.center-logo-header {
         display: block;
     }
     .main-navigation .navbar-nav > li.dropdown:hover .dropdown-menu {
-        @include rem(top, 170px); 
+        @include rem(top, 170px);
     }
     &.small-sub-nav .main-navigation .navbar-nav > li.dropdown .dropdown-menu {
         max-width: 500px;
@@ -288,7 +289,7 @@ header.center-logo-header {
 .padding-fixed-center {
     @include rem(padding-top, 210px);
     @include media-breakpoint-down(md){
-        @include rem(padding-top, 150px); 
+        @include rem(padding-top, 150px);
     }
 }
 
@@ -334,7 +335,7 @@ body.logo-hide header .site-branding{
 	@include media-breakpoint-down(md){
 		display: none;
 	}
-} 
+}
 
 #a0LoginButton{
     display: none;
